<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.PokeMeng.OldManGO.medicined.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_blankFragment"
            app:destination="@id/blankFragment" />
        <action
            android:id="@+id/action_homeFragment_to_dashboardFragment"
            app:destination="@id/navigation_dashboard" />
        <action
            android:id="@+id/action_homeFragment_to_notificationsFragment"
            app:destination="@+id/navigation_notifications"/>
    </fragment>

    <fragment
        android:id="@+id/blankFragment"
        android:name="com.PokeMeng.OldManGO.medicined.ui.home.BlankFragment"
        android:label="@string/hello_blank_fragment"
        tools:layout="@layout/fragment_blank">
        <action
            android:id="@+id/action_blankFragment_to_homeFragment"
            app:destination="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.PokeMeng.OldManGO.medicined.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard">
        <action
            android:id="@+id/action_dashboard_to_notifications"
            app:destination="@id/navigation_notifications" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.PokeMeng.OldManGO.medicined.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

</navigation>
