<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wlecomeuse02"
    tools:context=".Task.TaskAll">

    <ImageButton
        android:id="@+id/TaskAll_returnButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/task_all_effect_ripple"
        android:contentDescription="@string/task_returnImageDescription"
        android:scaleType="centerCrop"
        android:src="@drawable/task_all_ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TaskAll_pointsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/jfopenhuninn"
        android:text="@string/TaskAll_points_text"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/TaskAll_guideLine2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TaskAll_hintText" />

    <TextView
        android:id="@+id/TaskAll_titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/jfopenhuninn"
        android:text="@string/TaskAll_daily_tasks"
        android:textColor="@color/backgroundColor"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/TaskAll_addImage"
        android:layout_width="72dp"
        android:layout_height="63dp"
        android:layout_marginEnd="40dp"
        android:contentDescription="@string/TaskAll_add_image"
        app:layout_constraintBottom_toTopOf="@+id/TaskAll_addText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/TaskAll_guideLine2"
        app:srcCompat="@android:drawable/ic_input_add" />

    <ListView
        android:id="@+id/TaskAll_todayList"
        android:layout_width="match_parent"
        android:layout_height="380dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/TaskAll_guideLine3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/TaskAll_guideLine1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.18" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/TaskAll_guideLine2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.26" />

    <TextView
        android:id="@+id/TaskAll_addText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-5dp"
        android:fontFamily="@font/jfopenhuninn"
        android:text="@string/TaskAll_add_task"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/TaskAll_guideLine3"
        app:layout_constraintEnd_toEndOf="@+id/TaskAll_addImage"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/TaskAll_addImage"
        app:layout_constraintTop_toBottomOf="@+id/TaskAll_addImage" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/TaskAll_guideLine3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.32" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/TaskAll_guideLine4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.88" />

    <Button
        android:id="@+id/TaskAll_scheduledButton"
        android:layout_width="134dp"
        android:layout_height="50dp"
        android:layout_marginTop="-5dp"
        android:background="@drawable/all_style_button"
        android:fontFamily="@font/jfopenhuninn"
        android:text="@string/TaskAll_scheduled_tasks"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/TaskAll_guideLine4" />

    <Spinner
        android:id="@+id/TaskAll_dateSpinner"
        android:layout_width="176dp"
        android:layout_height="54dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="5dp"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/TaskAll_guideLine3"
        app:layout_constraintEnd_toStartOf="@+id/TaskAll_addImage"
        app:layout_constraintHorizontal_bias="0.264"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/TaskAll_guideLine2"
        app:layout_constraintVertical_bias="0.738" />

    <Button
        android:id="@+id/TaskAll_cheatButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="@string/TaskAll_cheat_select_all"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/TaskAll_hintText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:fontFamily="@font/jfopenhuninn"
        android:text="@string/TaskAll_reward_hint"
        android:textColor="@color/backgroundColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/TaskAll_guideLine1" />

</androidx.constraintlayout.widget.ConstraintLayout>